2003-03-27  Kevin Vandersloot <kfv101@psu.edu>

	* proctable.c: fix crash if username is null

2003-02-28  Kevin Vandersloot <kfv101@psu.edu>

	* procdialogs.c: some more HIGifying. Add some space to some dialogs
	
	* favorties.c: HIG stuff. Remove the frame and provide some space and a mnemonic
	for the tree
	
	* memmaps.c: some space

2003-02-28  Kevin Vandersloot <kfv101@psu.edu>

	* load-graph.c: do the configure event even if the graphs aren't displayed. Fixes bug #70101.
	
	* callbacks.c: force a graph redraw when tab switched to reduce the delay

2003-02-28  Kevin Vandersloot <kfv101@psu.edu>

	* procdialogs.c: Finish the prefs dialog

2003-02-24  Kevin Vandersloot <kfv101@psu.edu>

	* procdialogs.c: HIGify. Some details left.

2003-02-23  Kevin Vandersloot <kfv101@psu.edu>

	* interface.c: add to the view menu the ability to show dependencies and 
	show threads. Fixes bug #71064
	
	* prettytable.c: reorganize and simplify the code. Hopefully fixes the oft dupped bug
	95238
	
	* load-graph.c: some preliminary work to add multiple cpu support. Need to really
	think this out since I don't have a SMP machine.
	
	* callbacks.c: free the icontheme
	
	* proctable.c: don't free the pixbuf since it is owned by the hash now

2003-02-16  Kevin Vandersloot <kfv101@psu.edu>

	* infoview.c: fix silly typo and get spacing right

2003-02-16  Kevin Vandersloot <kfv101@psu.edu>
	
	* memmaps.c: get sorting of ints correct

2003-02-15  Kevin Vandersloot <kfv101@psu.edu>

	* memmaps.c: add new column displaying VM size. Patch by
	Jason A. Pfeil <jason@jasonpfeil.com>. Fixes bug #92977

	* callbacks.c: change Joergen's name to be in ascii and remove Eric
	since very little code of his actually remains

2003-02-12  Kevin Vandersloot <kfv101@psu.edu>

	* proctable.c: don't update rows that arent' visible. Should be a slight
	performance increase especially for displays with a lot of processes

2003-02-12  Kevin Vandersloot <kfv101@psu.edu>
