@@ -1,3 +1,8 @@
+2003-03-28  Kevin Vandersloot <kfv101@psu.edu>
+
+	* interface.c, procdialogs.c, infoview.c: some more HIGifications. Patch from
+	Laca Ferretti <elle.uca@libero.it>
+
 2003-03-27  Kevin Vandersloot <kfv101@psu.edu>
 
 	* proctable.c: fix crash if username is null
